--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,16 +1,17 @@
 ---
-driver_plugin: vagrant
+driver:
+  name: vagrant
+
+provisioner:
+  name: chef_solo
+
 platforms:
-- name: ubuntu-12.04
-  driver_config:
-    box: ubuntu-12.04
-    box_url: https://mopub-virtual-machines.s3.amazonaws.com/ubuntu-12.04.box
-    require_chef_omnibus: 11.4.0
-  run_list:
-  - recipe[apt]
+  - name: ubuntu-12.04
+  - name: centos-6.4
+
 suites:
 - name: git
-  run_list: 
+  run_list:
   - recipe[minitest-handler]
   - recipe[diamond_test::git]
   attributes: {}
