--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -7,6 +7,11 @@ provisioner:
 
 platforms:
   - name: ubuntu-12.04
+    run_list:
+      - recipe[apt]
+  - name: debian-7.4
+    run_list:
+      - recipe[apt]
   - name: centos-6.4
 
 suites:
