Supports custom runit service names for diamond
Allows the ability to run multiple installs of diamond at the same time
especially when combined with the prefix option

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -27,3 +27,7 @@ suites:
   - recipe[diamond_test::tarball]
   - recipe[diamond_test::processcollector]
   attributes: {}
+- name: custom_install
+  run_list:
+  - recipe[minitest-handler]
+  - recipe[diamond_test::custom_install]
